--- a/tpmern/backend/.env
+++ b/tpmern/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI = mongodb+srv://Ndiagadroid:password@clustermern0.m82zf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+mongodb+srv://Ndiagadroid:zakisab03@tpmern0.qldrd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
