Config du dossier routes(api) pour faires des opé CRUD

--- a/tpmern/backend/.env
+++ b/tpmern/backend/.env
@@ -1,1 +1,1 @@
-mongodb+srv://Ndiagadroid:zakisab03@tpmern0.qldrd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+ATLAS_URI = mongodb+srv://Ndiagadroid:zakisab03@tpmern0.qldrd.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
