--- a/tpmern/package.json
+++ b/tpmern/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.6.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
